--- a/.github/workflows/deploy-dokploy.yml
+++ b/.github/workflows/deploy-dokploy.yml
@@ -38,6 +38,8 @@ jobs:
           npm run build
         env:
           NODE_ENV: production
+          NEXT_PUBLIC_UMAMI_WEBSITE_ID: ${{ vars.NEXT_PUBLIC_UMAMI_WEBSITE_ID }}
+          NEXT_PUBLIC_UMAMI_URL: ${{ vars.NEXT_PUBLIC_UMAMI_URL }}
 
       - name: Log in to GitHub Container Registry
         if: github.event_name != 'pull_request'
@@ -75,6 +77,11 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            NEXT_PUBLIC_UMAMI_WEBSITE_ID=${{ vars.NEXT_PUBLIC_UMAMI_WEBSITE_ID }}
+            NEXT_PUBLIC_UMAMI_URL=${{ vars.NEXT_PUBLIC_UMAMI_URL }}
+            NEXT_PUBLIC_SITE_URL=${{ vars.NEXT_PUBLIC_SITE_URL }}
+            NEXT_PUBLIC_STRAPI_URL=${{ vars.NEXT_PUBLIC_STRAPI_URL }}
 
       - name: Deploy to Dokploy via API
         if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
