--- a/cms/package.json
+++ b/cms/package.json
@@ -15,6 +15,7 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@sensinum/strapi-plugin-mcp": "^1.1.0",
     "@strapi/plugin-cloud": "5.33.2",
     "@strapi/plugin-users-permissions": "5.33.2",
     "@strapi/strapi": "5.33.2",
